# ace_plus_q

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_use_ace_plus_q_model.ipynb  input.yaml
examples/Mag_ACE/: fingerprint.pb
examples/Mag_ACE/variables/: variables.data-00000-of-00001  variables.index
examples/saves/step_1000/: m_ace.yaml
potentials/: qace.py  qace_pbc.py
saves/saves_100/: q_ace.yaml
saves/saves_150/: q_ace.yaml
saves/saves_200/: q_ace.yaml
saves/saves_250/: q_ace.yaml
saves/saves_50/: q_ace.yaml
src/ace_plus_q/: __init__.py  ace_plus_q_utils.py  constants.py  core.py  fit.py  graphspecs.py  precision.py
src/ace_plus_q.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ace_plus_q/calculator/: __init__.py  asecalculator.py
src/ace_plus_q/data/: __init__.py  datakeys.py  tpatoms.py
src/ace_plus_q/functions/: embedding_functions.py  radial_functions.py  spherical_harmonics.py  utils.py
src/ace_plus_q/potentials/: __init__.py  potential.py  qace.py  qace_pbc.py
